--- a/NDNperf/server.yaml
+++ b/NDNperf/server.yaml
@@ -10,6 +10,6 @@ spec:
     command: ["/bin/sleep", "365d"]
     resources:
       limits:
-        memory: "150M"
-        cpu: "300m"
-  nodeName: otaviopc2-270e5j-2570ej
+        memory: "250M"
+        cpu: "500m"
+  #nodeName: otaviopc2-270e5j-2570ej
